buildscript {
    ext {
        springBootVersion = '3.3.2'
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
        classpath("org.springframework.boot:spring-boot-starter-jersey:${springBootVersion}")
    }
}

plugins {
    id 'java'
    id 'idea'
    id 'distribution'
    id 'org.springframework.boot' version '3.3.2'
    id 'application'
}

repositories {
    mavenCentral()
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    maven {
        url 'https://jitpack.io'
    }

    maven{
        url = "https://maven.lavalink.dev/releases"
    }
}

processResources {
    filesMatching('application.yml') {
        expand(project.properties)
    }
}

test {
    useJUnitPlatform()
}

mainClassName = 'net.dirtydeeds.discordsoundboard.MainController'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.named("bootJar") {
    manifest {
        attributes 'Implementation-Title': rootProject.name,
                'Implementation-Version': projectVersion
    }
}

dependencies {




    implementation 'net.dv8tion:JDA:5.0.0-beta.6'

    implementation group: 'dev.arbjerg', name: 'lavaplayer', version: '2.2.1'

    implementation 'dev.lavalink.youtube:v2:1.4.0'

    implementation 'com.github.aikaterna:lavaplayer-natives:original-SNAPSHOT'

    implementation group: "jakarta.inject", name: "jakarta.inject-api", version: "2.0.1"
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.3.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jersey', version: '3.3.2'

    implementation group: "org.springframework.boot", name: "spring-boot-starter-validation", version: "3.3.2"
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '3.3.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.3.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest', version: '3.3.2'

    implementation group: 'com.h2database', name: 'h2', version: '2.3.230'
}

processResources {
    exclude 'app.properties'
}

bootJar {
    exclude ("application.properties")
}

//Run tasks -> distributions -> assembleBootDist to create a release zip
bootDistZip {
    archiveFileName = 'DiscordSoundboard.zip'
    into ("DiscordSoundboard/bin") {
        from ('src/main/resources/application.properties.example')
    }
    into("DiscordSoundboard/bin/static") {
        from('src/main/webapp')
    }
    into("DiscordSoundboard/bin/sounds") {
        from('sounds')
    }
    rename { String fileName ->
        fileName.replace('application.properties.example', 'application.properties') }
}

task renameDist {
    doLast {
    new File("$buildDir/distributions/DiscordSoundboard.zip")
            .renameTo("$buildDir/distributions/DiscordSoundboard-"+projectVersion+".zip")
    }
}

bootDistZip.finalizedBy renameDist
